# pydantic-llm-tester

./: .gitignore  CHANGELOG.md  HANDOVER_NOTES.md  MODEL_CONFIG_REFACTORING_SUMMARY.md  README.md  SUMMARY.md  config.json  external_providers.json  finish-refactoring.md  install.sh  mock_provider_implementation.md  mock_test.py  models_pricing.json  openrouter_models.json  openrouter_test_report.md  provider_manager_refactoring.md  pyllm_config.json  pyproject.toml  refactor.txt  refactoring-progress.md  requirements.txt  run_examples.sh  run_test.sh  run_test_example.py  run_tests.sh  runner.py  setup.cfg  setup.py  setup_and_run.sh  setup_venv.sh  simple_test.py  structure_check.py  to-fix.txt  todo.txt  verify_providers.py
.github/workflows/: publish-to-pypi.yml
docs/: BRIEF_FOR_LLM.md  DEVELOPMENT.md  MODELS.md  MODEL_CONFIG_CHANGE.md  PACKAGING.md  PROJECT_STRUCTURE.md  README.md  TODO_FILES.md
docs/architecture/: DESIGN_PRINCIPLES.md  (+1 more)
examples/: README.md  optimized_test_report.md  run_mock_test.py  run_mock_test_with_products.py  run_with_google.py  test_report.md
llm_tester/: .env.example  cli.py  llm_tester.py  readme.txt
src/: .env.example  llm_tester.py  pyllm_config.json
test_results/: cost_report_example.json  report_example.md
tests/: conftest.py  test_accuracy_calculation.py  test_anthropic_provider.py  test_cli.py  test_config_manager.py  test_config_manager_model_config.py  test_configured_models_filtering.py  test_cost_manager.py  test_cost_manager_with_registry.py  test_cost_reporting_flow.py  test_google_provider.py  test_llm_registry.py  test_llm_tester.py  test_mistral_provider.py  test_mock_provider.py  test_model_registry.py  test_openai_provider.py  test_openrouter_model_fetch.py  test_openrouter_provider.py  test_provider_connections.py  test_provider_factory.py  test_provider_integration.py  test_provider_manager_refactored.py  test_pyllm_bridge.py  test_refactored_accuracy.py  test_report_generator.py
(+154 files in other folders)
