[metadata]
# Package name for PyPI
name = pydantic-llm-tester
# Package version
version = 0.1.12
# Short description of the package
description = A framework for testing LLM performance using pydanticAI
# Long description read from README.md
# Make sure your README.md is in the same directory as setup.cfg
long_description = file: README.md
# Specify the content type of the long description
long_description_content_type = text/markdown
# Package author(s) - fill in your details
author = Timo Railo
# Author's email - fill in your details
author_email = firstname@east.fi
# Package license
license = MIT
# Classifiers for PyPI
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
# Automatically find packages in the current directory
packages = find:
# Minimum Python version required
python_requires = >=3.9
# Core dependencies required for the package
install_requires =
    pydantic>=2.10.6
    openai>=1.0.0
    anthropic>=0.5.0
    mistralai>=1.6.0
    # Note: This dependency caused a conflict earlier.
    # Ensure this version or range is compatible with other dependencies.
    google-cloud-aiplatform
    # Note: This dependency caused a conflict earlier.
    # Ensure this version or range is compatible with google-cloud-aiplatform.
    vertexai>=1.71.1
    python-dotenv>=1.0.1
    typer>=0.15.2
    pydantic-ai>=0.0.44
    rapidfuzz>=3.12.2
    requests>=2.32.3
    google-generativeai>=0.8.5

[options.packages.find]
# Look for packages starting from the current directory
where = src

[entry_points]
console_scripts =
    llm-tester=src.cli.main
